# Beggar-My-Neighbour

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main2.cpp
benchmarks/: PopulationOperations_benchmark.cpp  benchmark.cpp
include/: Card.h  Cards.h  Game.h  GameRunner.h  Genome.h  GenomeOperations.h  Island.h
include/evolution/: Genome.h  GenomeOperations.h  Island.h  Population.h  PopulationOperations.h
include/game/: Card.h  Cards.h  Game.h  GameRunner.h
src/: Card.cpp  Cards.cpp  Game.cpp  GameRunner.cpp  Genome.cpp  GenomeOperations.cpp  Island.cpp  main.cpp
src/evolution/: Genome.cpp  GenomeOperations.cpp  Island.cpp  Population.cpp  PopulationOperations.cpp
src/game/: Card.cpp  Cards.cpp  Game.cpp  GameRunner.cpp
tests/: Card_test.cpp  Game_test.cpp  GenomeOperations_test.cpp
